--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qsi/001/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qsi/001/b/index.xhtml
@@ -28,7 +28,7 @@
 
     <ui:define name="content">
         <div id="functions-area" style = "min-width: 1000px;">
-            <button id="B1_1" tabindex="1" class="proceed">#{i18n.getText('QSI001_41')}</button>
+            <button id="B1_1" data-bind="click: add" tabindex="1" class="proceed">#{i18n.getText('QSI001_41')}</button>
 
             <button id="B1_2" data-bind="click: cancel" tabindex="3" >#{i18n.getText('QSI001_42')}</button>
 
@@ -45,8 +45,8 @@
             <div class="pull-left" style="margin-left: 100px">
                 <div class="control-group">
                     <div data-bind="ntsFormLabel: {}">#{i18n.getText('QSI001_44')}</div>
-                    <input data-bind="ntsTextEditor: {
-                                    value: simpleValue,
+                    <input id="B3_2" data-bind="ntsTextEditor: {
+                                    value: basicPension,
                                     name: '#{i18n.getText('QSI001_44')}',
                                     constraint: '',
                                     required: true,
@@ -56,8 +56,8 @@
 
                 <div class="control-group">
                     <div data-bind="ntsFormLabel: {}">#{i18n.getText('QSI001_46')}</div>
-                    <input data-bind="ntsTextEditor: {
-                                    value: simpleValue,
+                    <input id="B3_4" data-bind="ntsTextEditor: {
+                                    value: salaryMonthly,
                                     name: '#{i18n.getText('QSI001_47')}',
                                     constraint: '',
                                     required: true,
@@ -67,8 +67,8 @@
 
                 <div class="control-group">
                     <div data-bind="ntsFormLabel: {}">#{i18n.getText('QSI001_48')}</div>
-                    <input data-bind="ntsTextEditor: {
-                                    value: simpleValue,
+                    <input id="B3_6" data-bind="ntsTextEditor: {
+                                    value: salaryMonthlyActual,
                                     name: '#{i18n.getText('QSI001_49')}',
                                     constraint: '',
                                     required: true,
@@ -78,8 +78,8 @@
 
                 <div class="control-group">
                     <div data-bind="ntsFormLabel: {}">#{i18n.getText('QSI001_50')}</div>
-                    <input data-bind="ntsTextEditor: {
-                                    value: simpleValue,
+                    <input id="B3_8" data-bind="ntsTextEditor: {
+                                    value: totalCompensation,
                                     name: '#{i18n.getText('QSI001_51')}',
                                     constraint: '',
                                     required: true,
@@ -91,10 +91,10 @@
                     <div data-bind="ntsFormLabel: {}">#{i18n.getText('QSI001_52')}</div>
                     <div class="cf" data-bind="ntsSwitchButton: {
                         name: '#{i18n.getText('QSI001_53')}',
-                        options: roundingRules,
+                        options: depNotiAttach,
                         optionsValue: 'code',
                         optionsText: 'name',
-                        value: selectedRuleCode,
+                        value: selectedDepNotiAttach,
                         required: true,
                         enable: true }"></div>
                 </div>
@@ -104,17 +104,17 @@
                 <div>
                     <div data-bind="ntsFormLabel: {}">#{i18n.getText('QSI001_56')}</div>
                     <div>
-                        <div data-bind="ntsCheckBox: { checked: true }">#{i18n.getText('QSI001_57')}</div>
+                        <div id="B4_2" data-bind="ntsCheckBox: { checked: applyToEmployeeOver70 }">#{i18n.getText('QSI001_57')}</div>
                         <br></br>
-                        <div data-bind="ntsCheckBox: { checked: true }">#{i18n.getText('QSI001_58')}</div>
+                        <div id="B4_3" data-bind="ntsCheckBox: { checked: twoOrMoreEmployee }">#{i18n.getText('QSI001_58')}</div>
                         <br></br>
-                        <div data-bind="ntsCheckBox: { checked: true }">#{i18n.getText('QSI001_59')}</div>
+                        <div id="B4_4" data-bind="ntsCheckBox: { checked: shortWorkHours }">#{i18n.getText('QSI001_59')}</div>
                         <br></br>
-                        <div data-bind="ntsCheckBox: { checked: true }">#{i18n.getText('QSI001_60')}</div>
+                        <div id="B4_5" data-bind="ntsCheckBox: { checked: continuousEmpAfterRetire }">#{i18n.getText('QSI001_60')}</div>
                         <br></br>
-                        <div data-bind="ntsCheckBox: { checked: true }">#{i18n.getText('QSI001_61')}</div>
-                        <input data-bind="ntsTextEditor: {
-                                    value: simpleValue,
+                        <div id="B4_6" data-bind="ntsCheckBox: { checked: otherNotes }">#{i18n.getText('QSI001_61')}</div>
+                        <input id="B4_7" data-bind="ntsTextEditor: {
+                                    value: textOtherNotes,
                                     name: '#{i18n.getText('QSI001_62')}',
                                     constraint: '',
                                     required: true,
@@ -123,13 +123,13 @@
                     </div>
                     <div data-bind="ntsFormLabel: {}">#{i18n.getText('QSI001_63')}</div>
                     <div>
-                        <div data-bind="ntsCheckBox: { checked: true }">#{i18n.getText('QSI001_64')}</div>
+                        <div id="B4_9" data-bind="ntsCheckBox: { checked: livingAbroad }">#{i18n.getText('QSI001_64')}</div>
                         <br></br>
-                        <div data-bind="ntsCheckBox: { checked: true }">#{i18n.getText('QSI001_65')}</div>
+                        <div id="B4_10" data-bind="ntsCheckBox: { checked: shortTermResidence }">#{i18n.getText('QSI001_65')}</div>
                         <br></br>
-                        <div data-bind="ntsCheckBox: { checked: true }">#{i18n.getText('QSI001_66')}</div>
+                        <div id="B4_11" data-bind="ntsCheckBox: { checked: otherNotes1 }">#{i18n.getText('QSI001_66')}</div>
                         <input data-bind="ntsTextEditor: {
-                                    value: simpleValue,
+                                    value: textOtherNotes1,
                                     name: '#{i18n.getText('QSI001_67')}',
                                     constraint: '',
                                     required: true,
